# pw-splitter

./: .gitignore  README.md
.github/: artifact-groups.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: rust.yml
src/: .gitignore  AGENTS.md  Cargo.toml
src/pw-splitter/: Cargo.toml
src/pw-splitter/src/: error.rs  main.rs
src/pw-splitter/src/pipewire/: commands.rs  parser.rs  types.rs
src/pw-splitter/src/splitter/: cleanup.rs  mod.rs  setup.rs  state.rs
src/pw-splitter/src/tui/: app.rs  events.rs  mod.rs  ui.rs
