[package]
name = "pw-splitter"
version = "0.1.0"
edition = "2024"
description = "PipeWire audio routing TUI for splitting audio streams"
repository = "https://github.com/Sewer56/pw-splitter"
license = "MIT"
keywords = ["pipewire", "audio", "routing", "tui", "linux"]
categories = ["command-line-utilities", "multimedia::audio"]
readme = "../../README.md"

[[bin]]
name = "pw-splitter"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = { version = "0.30.0-beta.1", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.29", default-features = false, features = ["events"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
pico-args = "0.5"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"
